fixing failing tests