@@ -3,13 +3,16 @@ package com.grocerystore.api.service;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
+import java.util.UUID;
 
 import com.grocerystore.api.core.Endpoint;
 import com.grocerystore.api.core.SpecFactory;
 
 import io.cucumber.java.Scenario;
+import io.restassured.response.Response;
 import io.restassured.specification.RequestSpecification;
 
 public class TokenManager {
@@ -22,20 +25,37 @@ public class TokenManager {
     }
 
     public String getToken(String clientName, String clientEmail) {
+
+        String envToken = System.getenv("API_TOKEN");
+        if (envToken != null && !envToken.isEmpty()) {
+            scenario.log("Using token from environment variable");
+            return envToken.trim();
+        }
         String cachedToken = readTokenFromFile();
         if (cachedToken != null && !cachedToken.isEmpty()) {
-            scenario.log("Using cached token");
-            return cachedToken;
+            scenario.log("Using cached token from file");
+            return cachedToken.trim();
         }
 
-        String newToken = requestToken(clientName, clientEmail);
-        scenario.log("New token obtained: " + newToken);
-        writeTokenToFile(newToken);
-        return newToken;
+        Response response = requestToken(clientName, clientEmail);
+        if (response.statusCode() == 201) {
+            writeTokenToFile(response.jsonPath().getString("accessToken"));
+            return response.jsonPath().getString("accessToken");
+        }
+
+        if (response.statusCode() == 409) {
+            scenario.log("Client already registered, attempting to retrieve existing token");
+            clientEmail = "client_" + UUID.randomUUID().toString().substring(0, 8) + "@example.com";
+            response = requestToken(clientName, clientEmail);
+
+        }
+        scenario.log("New token obtained: " + response.jsonPath().getString("accessToken"));
+        writeTokenToFile(response.jsonPath().getString("accessToken"));
+        return response.jsonPath().getString("accessToken");
     }
 
     public String refreshToken(String clientName, String clientEmail) {
-        String newToken = requestToken(clientName, clientEmail);
+        String newToken = requestToken(clientName, clientEmail).jsonPath().getString("accessToken");
         writeTokenToFile(newToken);
         scenario.log("Token refreshed: " + newToken);
         return newToken;
@@ -43,9 +63,9 @@ public class TokenManager {
 
     private String readTokenFromFile() {
         try {
-            File tokenFile = new File(TOKEN_FILE);
-            if (tokenFile.exists()) {
-                return new String(Files.readAllBytes(Paths.get(TOKEN_FILE))).trim();
+            Path path = Path.of(TOKEN_FILE);
+            if (Files.exists(path)) {
+                return Files.readString(path).trim();
             }
         } catch (IOException e) {
             scenario.log("Failed to read token file: " + e.getMessage());
@@ -55,13 +75,13 @@ public class TokenManager {
 
     private void writeTokenToFile(String token) {
         try {
-            Files.write(Paths.get(TOKEN_FILE), token.getBytes());
+            Files.writeString(Path.of(TOKEN_FILE), token);
         } catch (IOException e) {
             scenario.log("Failed to write token file: " + e.getMessage());
         }
     }
 
-    private String requestToken(String clientName, String clientEmail) {
+    private Response requestToken(String clientName, String clientEmail) {
         Map<String, String> payload = Map.of(
                 "clientName", clientName,
                 "clientEmail", clientEmail);
@@ -70,10 +90,7 @@ public class TokenManager {
                 .contentType("application/json")
                 .body(payload)
                 .when()
-                .post(Endpoint.REGISTER_API_CLIENT.getPath())
-                .then()
-                .statusCode(201)
-                .extract()
-                .response().jsonPath().getString("accessToken");
+                .post(Endpoint.REGISTER_API_CLIENT.getPath());
+
     }
 }
